Fix regression in WebAppProviderFactory

Adds support for WebAppProviderFactory to handle
guest and incognito profiles.

BUG=918786

Change-Id: I8338bce9b1291a25b98d16cc61f0162bf83140e2
Reviewed-on: https://chromium-review.googlesource.com/c/1403089
Reviewed-by: Alexey Baskakov <loyso@chromium.org>
Commit-Queue: Becca Hughes <beccahughes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623946}
Former-commit-id: 21eed52bba818d93072db66b6cef839b89ae7739